updates to main app based on what was in static files

--- a/views/city.ejs
+++ b/views/city.ejs
@@ -64,9 +64,8 @@
 	<!-- #google-container will contain the map  -->
 	<div id="google-container"></div>
 	<!-- #cd-zoom-in and #zoom-out will be used to create our custom buttons for zooming-in/out -->
-	<div id="cd-zoom-in"></div>
-	<div id="cd-zoom-out"></div>
-</section>
+  <div id="cd-zoom-in"><i class="fa fa-plus"></i></div>
+  <div id="cd-zoom-out"><i class="fa fa-minus"></i></div></section>
 </section>
 
 <script language="javascript" type="text/javascript">
