--- a/public/css/homepage-styles.css
+++ b/public/css/homepage-styles.css
@@ -7,6 +7,76 @@ html body {
   background: #2a3a4d;
   margin: 0;
   padding: 0;
+  height: 100vh;
+  overflow: hidden;
+}
+html body .top-side img {
+  width: 50%;
+}
+html body #coordinator {
+  position: fixed;
+  left: 480px;
+  top: 0px;
+  padding: 16px 20px;
+  background: rgba(42, 58, 77, 0.75);
+  z-index: 9999;
+}
+html body #coordinator .left {
+  float: left;
+  text-align: center;
+  margin-right: 15px;
+}
+html body #coordinator .left .border-wrapper {
+  background: #32e4c5;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #32e4c5), color-stop(100%, #6c86c7));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #32e4c5 0%, #6c86c7 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#32e4c5', endColorstr='#6c86c7', GradientType=0);
+  /* IE6-9 */
+  width: 77px;
+  height: 77px;
+  overflow: hidden;
+  text-align: center;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+html body #coordinator .left img {
+  border-radius: 50%;
+  width: 75px;
+  height: 75px;
+  margin-top: 1px;
+}
+html body #coordinator .left a {
+  text-decoration: underline;
+  opacity: .6;
+  transition: all 0.2s ease-in-out;
+  font-size: 13px;
+}
+html body #coordinator .left a:hover {
+  opacity: 1;
+}
+html body #coordinator .right {
+  float: left;
+}
+html body #coordinator .right h4 {
+  font-weight: bold;
+  color: #fff;
+  text-transform: uppercase;
+  margin-bottom: 0px;
+  margin-top: 12px;
+}
+html body #coordinator .right a {
+  color: #32e4c5;
 }
 html body p,
 html body a,
@@ -22,6 +92,52 @@ html body input {
   font-style: normal;
   font-weight: 400;
 }
+html body #cd-zoom-in {
+  height: 32px;
+  width: 32px;
+  cursor: pointer;
+  margin-left: 10px;
+  background-color: #2a3a4d;
+  line-height: 32px;
+  text-align: center;
+  margin-top: 15px;
+  position: fixed;
+  right: 15px;
+}
+html body #cd-zoom-in i {
+  color: #fff;
+  opacity: .75;
+  font-size: 20px;
+  transition: all 0.2s ease-in-out;
+  line-height: 32px;
+}
+html body #cd-zoom-in i:hover {
+  opacity: 1;
+  color: #32e4c5;
+}
+html body #cd-zoom-out {
+  height: 32px;
+  width: 32px;
+  cursor: pointer;
+  margin-left: 10px;
+  background-color: #2a3a4d;
+  line-height: 32px;
+  text-align: center;
+  position: fixed;
+  right: 15px;
+  margin-top: 50px;
+}
+html body #cd-zoom-out i {
+  color: #fff;
+  opacity: .75;
+  line-height: 32px;
+  font-size: 20px;
+  transition: all 0.2s ease-in-out;
+}
+html body #cd-zoom-out i:hover {
+  opacity: 1;
+  color: #32e4c5;
+}
 html a {
   color: #fff;
   text-decoration: none;
@@ -33,7 +149,7 @@ html aside {
   background: #2a3a4d;
   height: 100vh;
   width: 480px;
-  overflow: hidden;
+  overflow: scroll;
   float: left;
 }
 html aside .side-padding {
@@ -52,11 +168,11 @@ html aside .city h1 {
   font-weight: 400;
   text-transform: uppercase;
   color: #fff;
-  font-size: 4em;
+  font-size: 3em;
   margin-top: 0px;
   line-height: 100%;
   letter-spacing: .1em;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
 html aside .search {
   height: 50px;
@@ -132,127 +248,4 @@ html #main {
 html #main #cd-google-map,
 html #main #google-container {
   height: 100vh;
-}
-html #homeMap {
-  margin: 50px auto;
-  width: 90%;
-  background: #f1f1f1;
-  height: 50vh;
-}
-html #homeMap #cd-google-map,
-html #homeMap #google-container {
-  height: 50vh;
-}
-.home-logo {
-  text-align: center;
-  margin: 50px auto;
-}
-.country {
-  height: 50px;
-  background: #32e4c5;
-  /* Old browsers */
-  background: -moz-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
-  /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #32e4c5), color-stop(100%, #6c86c7));
-  /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
-  /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
-  /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
-  /* IE10+ */
-  background: linear-gradient(to bottom, #32e4c5 0%, #6c86c7 100%);
-  /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#32e4c5', endColorstr='#6c86c7', GradientType=0);
-  /* IE6-9 */
-  padding: 1px;
-  width: 70%;
-  margin: 0px auto;
-  position: relative;
-}
-.country select {
-  width: 100%;
-  height: 100%;
-  background: #2a3a4d;
-  color: #fff;
-  padding-left: 14px;
-  border: 0px;
-  outline: none;
-  font-size: 18px;
-  font-weight: 300;
-  letter-spacing: 2px;
-  -webkit-appearance: none;
-}
-.country .country-icon {
-  position: absolute;
-  right: 15px;
-  top: 25%;
-}
-.country .country-icon i {
-  color: #fff;
-  font-weight: 100;
-  font-size: 24px;
-}
-.container {
-  max-width: 1170px;
-  margin: 0 auto;
-}
-.space h5 a {
-  color: #fff;
-  float: right;
-  font-weight: 300;
-}
-.us h3 {
-  color: #fff;
-  font-size: 33px;
-  font-weight: 500;
-  letter-spacing: 3px;
-}
-.gradient-line {
-  height: 1px;
-  background: #32e4c5;
-  /* Old browsers */
-  background: -moz-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
-  /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #32e4c5), color-stop(100%, #6c86c7));
-  /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
-  /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
-  /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
-  /* IE10+ */
-  background: linear-gradient(to bottom, #32e4c5 0%, #6c86c7 100%);
-  /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#32e4c5', endColorstr='#6c86c7', GradientType=0);
-  /* IE6-9 */
-  width: 100%;
-  margin: 0 auto;
-}
-.state {
-  width: 23%;
-  float: left;
-}
-.state h4 {
-  color: #fff;
-  font-size: 24px;
-  font-weight: 300;
-  padding-top: 20px;
-}
-.state a {
-  color: #32e4c5;
-  font-size: 17px;
-  font-weight: 300;
-}
-.state a:hover {
-  color: #fff;
-}
-.state ul li {
-  list-style-type: none;
-}
-.little-line {
-  height: 1px;
-  background: #fff;
-  opacity: 0.2;
-  width: 210px;
 }
