--- a/public/css/homepage-styles.css
+++ b/public/css/homepage-styles.css
@@ -1,3 +1,4 @@
+
 /* Coworking Around The World */
 html {
   margin: 0;
@@ -168,11 +169,11 @@ html aside .city h1 {
   font-weight: 400;
   text-transform: uppercase;
   color: #fff;
-  font-size: 3em;
+  font-size: 4em;
   margin-top: 0px;
   line-height: 100%;
   letter-spacing: .1em;
-  margin-bottom: 15px;
+  margin-bottom: 30px;
 }
 html aside .search {
   height: 50px;
@@ -244,6 +245,133 @@ html #main {
   width: 100%;
   background: #f1f1f1;
   height: 100vh;
+}
+html #main #cd-google-map,
+html #main #google-container {
+  height: 100vh;
+}
+html #homeMap {
+  margin: 50px auto;
+  width: 90%;
+  background: #f1f1f1;
+  height: 50vh;
+}
+html #homeMap #cd-google-map,
+html #homeMap #google-container {
+  height: 50vh;
+}
+.home-logo {
+  text-align: center;
+  margin: 50px auto;
+}
+.country {
+  height: 50px;
+  background: #32e4c5;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #32e4c5), color-stop(100%, #6c86c7));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #32e4c5 0%, #6c86c7 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#32e4c5', endColorstr='#6c86c7', GradientType=0);
+  /* IE6-9 */
+  padding: 1px;
+  width: 70%;
+  margin: 0px auto;
+  position: relative;
+}
+.country select {
+  width: 100%;
+  height: 100%;
+  background: #2a3a4d;
+  color: #fff;
+  padding-left: 14px;
+  border: 0px;
+  outline: none;
+  font-size: 18px;
+  font-weight: 300;
+  letter-spacing: 2px;
+  -webkit-appearance: none;
+}
+.country .country-icon {
+  position: absolute;
+  right: 15px;
+  top: 25%;
+}
+.country .country-icon i {
+  color: #fff;
+  font-weight: 100;
+  font-size: 24px;
+}
+.container {
+  max-width: 1170px;
+  margin: 0 auto;
+}
+.space h5 a {
+  color: #fff;
+  float: right;
+  font-weight: 300;
+}
+.us h3 {
+  color: #fff;
+  font-size: 33px;
+  font-weight: 500;
+  letter-spacing: 3px;
+}
+.gradient-line {
+  height: 1px;
+  background: #32e4c5;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #32e4c5), color-stop(100%, #6c86c7));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #32e4c5 0%, #6c86c7 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#32e4c5', endColorstr='#6c86c7', GradientType=0);
+  /* IE6-9 */
+  width: 100%;
+  margin: 0 auto;
+}
+.state {
+  width: 23%;
+  float: left;
+}
+.state h4 {
+  color: #fff;
+  font-size: 24px;
+  font-weight: 300;
+  padding-top: 20px;
+}
+.state a {
+  color: #32e4c5;
+  font-size: 17px;
+  font-weight: 300;
+}
+.state a:hover {
+  color: #fff;
+}
+.state ul li {
+  list-style-type: none;
+}
+.little-line {
+  height: 1px;
+  background: #fff;
+  opacity: 0.2;
+  width: 210px;
 }
 html #main #cd-google-map,
 html #main #google-container {
