--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,6 +10,74 @@ html body {
   height: 100vh;
   overflow: hidden;
 }
+html body .top-side img {
+  width: 50%;
+}
+html body #coordinator {
+  position: fixed;
+  left: 480px;
+  top: 0px;
+  padding: 16px 20px;
+  background: rgba(42, 58, 77, 0.75);
+  z-index: 9999;
+}
+html body #coordinator .left {
+  float: left;
+  text-align: center;
+  margin-right: 15px;
+}
+html body #coordinator .left .border-wrapper {
+  background: #32e4c5;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #32e4c5), color-stop(100%, #6c86c7));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #32e4c5 0%, #6c86c7 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#32e4c5', endColorstr='#6c86c7', GradientType=0);
+  /* IE6-9 */
+  width: 77px;
+  height: 77px;
+  overflow: hidden;
+  text-align: center;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+html body #coordinator .left img {
+  border-radius: 50%;
+  width: 75px;
+  height: 75px;
+  margin-top: 1px;
+}
+html body #coordinator .left a {
+  text-decoration: underline;
+  opacity: .6;
+  transition: all 0.2s ease-in-out;
+  font-size: 13px;
+}
+html body #coordinator .left a:hover {
+  opacity: 1;
+}
+html body #coordinator .right {
+  float: left;
+}
+html body #coordinator .right h4 {
+  font-weight: bold;
+  color: #fff;
+  text-transform: uppercase;
+  margin-bottom: 0px;
+  margin-top: 12px;
+}
+html body #coordinator .right a {
+  color: #32e4c5;
+}
 html body p,
 html body a,
 html body h1,
@@ -24,6 +92,52 @@ html body input {
   font-style: normal;
   font-weight: 400;
 }
+html body #cd-zoom-in {
+  height: 32px;
+  width: 32px;
+  cursor: pointer;
+  margin-left: 10px;
+  background-color: #2a3a4d;
+  line-height: 32px;
+  text-align: center;
+  margin-top: 15px;
+  position: fixed;
+  right: 15px;
+}
+html body #cd-zoom-in i {
+  color: #fff;
+  opacity: .75;
+  font-size: 20px;
+  transition: all 0.2s ease-in-out;
+  line-height: 32px;
+}
+html body #cd-zoom-in i:hover {
+  opacity: 1;
+  color: #32e4c5;
+}
+html body #cd-zoom-out {
+  height: 32px;
+  width: 32px;
+  cursor: pointer;
+  margin-left: 10px;
+  background-color: #2a3a4d;
+  line-height: 32px;
+  text-align: center;
+  position: fixed;
+  right: 15px;
+  margin-top: 50px;
+}
+html body #cd-zoom-out i {
+  color: #fff;
+  opacity: .75;
+  line-height: 32px;
+  font-size: 20px;
+  transition: all 0.2s ease-in-out;
+}
+html body #cd-zoom-out i:hover {
+  opacity: 1;
+  color: #32e4c5;
+}
 html a {
   color: #fff;
   text-decoration: none;
@@ -35,7 +149,7 @@ html aside {
   background: #2a3a4d;
   height: 100vh;
   width: 480px;
-  overflow: hidden;
+  overflow: scroll;
   float: left;
 }
 html aside .side-padding {
@@ -54,11 +168,11 @@ html aside .city h1 {
   font-weight: 400;
   text-transform: uppercase;
   color: #fff;
-  font-size: 4em;
+  font-size: 3em;
   margin-top: 0px;
   line-height: 100%;
   letter-spacing: .1em;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
 html aside .search {
   height: 50px;
@@ -125,9 +239,6 @@ html aside ul li img {
   height: 28px;
   margin-right: 12px;
   float: left;
-}
-html aside .city-side {
-  overflow: scroll !important;
 }
 html #main {
   width: 100%;
