--- a/views/city.ejs
+++ b/views/city.ejs
@@ -13,7 +13,7 @@
 <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCpWY1y7do3eG1RacDVOkJ91n8SURNN7c"></script>
 </head>
-<body>
+<body style="overflow: hidden">
 
 <aside>
 	<div class="top-side">
