updated front page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -140,18 +140,15 @@
 
 <div class="container" style="color: white; margin-top: 10px;">
   <p>
-    Have a coworking space to add? Reach out to <a href="http://twitter.com/<%= masterAccount %>" style="text-decoration: underline">@<%= masterAccount %> on Twitter</a> (just send a mention and we'll get back to you).
+      The Open Coworking Map is a comprehensive directory of coworking spaces for anyone interested in finding coworking in their city. We provide the addresses (URL and mail) for you to explore the spaces on your own. The Open Coworking Map just offers a directory and map of the spaces themselves. Nothing more, nothing less.
   </p>
 
   <p>
-    The idea is simple: independent professionals and those with workplace
-    flexibility work better together than they do alone. Coworking spaces are
-    about community-building and sustainability. Participants agree to uphold
-    the values set forth by the movement’s founders, as well as interact and share
-    with one another. We are about creating better places to work and as a result,
-    a better way to work.
+      The Open Coworking Map is maintained by a devoted set of curators, one in each city where coworking exists.
   </p>
-</div>
 
+  <p>
+      Have a city you want to add to the Open Coworking Map? Reach out to <a href="http://twitter.com/ocMAPteam" style="color: Orange">@ocMAPteam</a> on Twitter (just send a mention and we'll get back to you).</div>
+  </p>
 </body>
 </html>
