--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Coworking Around the Globe</title>
+<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
 <link href="/css/homepage-styles.css" rel="stylesheet" type="text/css">
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
