media query added to maps scren to help with mobile look

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -251,3 +251,7 @@ html #main #cd-google-map,
 html #main #google-container {
   height: 100vh;
 }
+
+@media (max-width: 375px) {
+  #cities-aside { display: none; }
+}
