--- a/views/city.ejs
+++ b/views/city.ejs
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Coworking Around the Globe</title>
+<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
 <link href="/css/styles.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <script src="//use.typekit.net/uam2aqu.js"></script>
@@ -15,7 +16,7 @@
 </head>
 <body style="overflow: hidden">
 
-<aside>
+<aside id="cities-aside">
 	<div class="top-side">
 		<div class="side-padding">
 			<div class="logo">
