--- a/views/city.ejs
+++ b/views/city.ejs
@@ -20,7 +20,7 @@
 	<div class="top-side">
 		<div class="side-padding">
 			<div class="logo">
-				<img src="/img/logo.png">
+				<img src="/img/coworkinglogo.png">
 			</div>
 			<div class="back">
 				<a href="/"><i class="fa fa-arrow-left"></i>Go Back</a>
@@ -77,6 +77,9 @@
 			  <h4>City Coordinator</h4>
 			  <a id="coordinator-link" href="http://twitter.com/<%= city.coordinator %>" class="box-link">Contact Oren Salomon (@<%= city.coordinator %>) on Twitter to get your space listed.</a>
 		  </div>
+			<div id="menu-toggle">
+				<i class="fa fa-bars"></i>
+			</div>
 	  </div>
   </section>
 </section>
