Fix for the profile at bottom

--- a/views/city.ejs
+++ b/views/city.ejs
@@ -69,7 +69,7 @@
 	  <!-- #cd-zoom-in and #zoom-out will be used to create our custom buttons for zooming-in/out -->
 	  <div id="cd-zoom-in"><i class="fa fa-plus"></i></div>
 	  <div id="cd-zoom-out"><i class="fa fa-minus"></i></div>
-	  <div id="coordinator" style="display: none; max-width: 25%">
+	  <div id="coordinator" style="">
 		  <div class="left">
 			  <div class="border-wrapper"><img id="coordinator-image" src="http://placehold.it/100x100"></div>
 		  </div>
