--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
       <h5><a href="/viewhistory">View Change History</a></h5><br />
       <h5><a href="/logout">Sign Out: @<%= user.username %></a></h5><br />
     <% } else { %>
-      <h5><a href="/twitter">Sign In</a></h5>
+      <h5><a href="/twitter">Curator Sign In</a></h5>
     <% } %>
 	</div>
 </div>
@@ -140,14 +140,15 @@
 <% }); %>
 
 <div class="container" style="color: white; margin-top: 10px;">
-  <p>
-      The Open Coworking Map is a comprehensive directory of coworking spaces for anyone interested in finding coworking in their city. We provide the addresses (URL and mail) for you to explore the spaces on your own. The Open Coworking Map just offers a directory and map of the spaces themselves. Nothing more, nothing less.
+   <p>
+      The Open Coworking Map is a comprehensive directory of coworking spaces for anyone to find coworking in their city. We provide the addresses (URL and mail) for you to explore the spaces on your own.
   </p>
-
+    <p>
+   The Open Coworking Map just offers a directory and map of the spaces themselves. Nothing more, nothing less.
+   </p>
   <p>
       The Open Coworking Map is maintained by a devoted set of curators, one in each city where coworking exists.
   </p>
-
   <p>
       Have a city you want to add to the Open Coworking Map? Reach out to <a href="http://twitter.com/ocMAPteam" style="color: Orange">@ocMAPteam</a> on Twitter (just send a mention and we'll get back to you).</div>
   </p>
