--- a/views/city.ejs
+++ b/views/city.ejs
@@ -78,7 +78,7 @@
 			  <div class="border-wrapper"><img id="coordinator-image" src="http://placehold.it/100x100"></div>
 		  </div>
 		  <div class="right">
-			  <h4>City Coordinator</h4>
+			  <h4>City Curator</h4>
 			  <a id="coordinator-link" href="http://twitter.com/<%= city.coordinator %>" class="box-link">Contact Oren Salomon (@<%= city.coordinator %>) on Twitter to get your space listed.</a>
 		  </div>
 	  </div>
