--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,6 +13,9 @@ html body {
 html body .top-side img {
   width: 50%;
 }
+html body .location a {
+  color: #000;
+}
 html body #coordinator {
   position: fixed;
   left: 480px;
