debugging... again... in production #yolo

--- a/views/city.ejs
+++ b/views/city.ejs
@@ -79,7 +79,7 @@
 		  </div>
 		  <div class="right">
 			  <h4>City Coordinator</h4>
-			  <a id="coordinator-link" href="http://twitter.com/<%= city.coordinator %>" class="box-link">Contact <%= JSON.stringify(coordinators) %> (@<%= city.coordinator %>) on Twitter to get your space listed.</a>
+			  <a id="coordinator-link" href="http://twitter.com/<%= city.coordinator %>" class="box-link">Contact <%= JSON.stringify(accessList) %> (@<%= city.coordinator %>) on Twitter to get your space listed.</a>
 		  </div>
 	  </div>
   </section>
