you'd think I'd have learn my lesson by now and just work on this locally

--- a/views/city.ejs
+++ b/views/city.ejs
@@ -75,7 +75,7 @@
 	  <div id="cd-zoom-out"><i class="fa fa-minus"></i></div>
 	  <div id="coordinator" style="">
 		  <div class="left">
-			  <div class="border-wrapper"><img id="coordinator-image" src="<%= ({ profile_image_url: "http://placehold.it/100x100" }).profile_image_url || %>"></div>
+			  <div class="border-wrapper"><img id="coordinator-image" src="<%= ({ profile_image_url: "http://placehold.it/100x100" }).profile_image_url %>"></div>
 		  </div>
 		  <div class="right">
 			  <h4>City Coordinator</h4>
