--- a/views/city.ejs
+++ b/views/city.ejs
@@ -75,11 +75,11 @@
 	  <div id="cd-zoom-out"><i class="fa fa-minus"></i></div>
 	  <div id="coordinator" style="">
 		  <div class="left">
-			  <div class="border-wrapper"><img id="coordinator-image" src="<%= ({ profile_image_url: "http://placehold.it/100x100" }).profile_image_url %>"></div>
+			  <div class="border-wrapper"><img id="coordinator-image" src="<%= (coordinators[city.coordinator] || { profile_image_url: "http://placehold.it/100x100" }).profile_image_url %>"></div>
 		  </div>
 		  <div class="right">
 			  <h4>City Coordinator</h4>
-			  <a id="coordinator-link" href="http://twitter.com/<%= city.coordinator %>" class="box-link">Contact <%= JSON.stringify(coordinators) %> (@<%= city.coordinator %>) on Twitter to get your space listed.</a>
+			  <a id="coordinator-link" href="http://twitter.com/<%= city.coordinator %>" class="box-link">Contact <%= (coordinators[city.coordinator] || { name: "" }).name %> (@<%= city.coordinator %>) on Twitter to get your space listed.</a>
 		  </div>
 	  </div>
   </section>
@@ -114,6 +114,10 @@
             }
         });
     }
+</script>
+
+<script type="text/debug">
+  <%= JSON.stringify(coordinators, null, 2) %>
 </script>
 </body>
 </html>
