--- a/views/city.ejs
+++ b/views/city.ejs
@@ -15,6 +15,16 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCpWY1y7do3eG1RacDVOkJ91n8SURNN7c"></script>
 </head>
 <body style="overflow: hidden">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-67849115-7', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 <div id="menu-toggle">
 	<i class="fa fa-bars"></i>
